fix results display to not cut off bottom of result title links

--- a/myuw/static/css/mobile.less
+++ b/myuw/static/css/mobile.less
@@ -668,6 +668,10 @@ body {
         font-family: inherit;
     }
 
+    .gsc-result div.gs-title {
+        height: auto;
+    }
+
     .gsc-control-cse .gs-spelling, .gsc-control-cse .gs-result .gs-title, .gsc-control-cse .gs-result .gs-title * {
         font-size: 18px;
         font-weight: bold;
@@ -684,7 +688,7 @@ body {
     .gsc-table-result, .gsc-thumbnail-inside, .gsc-url-top { padding-left: 0; padding-right: 0; }
 
     .gsc-url-top {
-        margin: 3px 0 5px 0;
+        margin: 0 0 5px 0;
     }
 
     .gsc-webResult .gsc-result {
